[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/championship/team-picker/TeamPicker.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/font/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/ui/TextureProgress.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/locker/Locker.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 106
outline_size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.3
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Team:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Team:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.8, 1.8 ), Vector2( 3, 3 ), Vector2( 1.8, 1.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Price:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TeamPicker" type="Control"]
modulate = Color( 1, 1, 1, 0.9 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -640.0
margin_right = 330.0
margin_bottom = 640.0
custom_constants/separation = 20

[node name="League" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 660.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 350 )
alignment = 1

[node name="PrevLeague" type="Button" parent="VBoxContainer/League"]
margin_top = 127.0
margin_right = 81.0
margin_bottom = 222.0
size_flags_vertical = 4
text = " < "

[node name="LeagueLabel" type="Label" parent="VBoxContainer/League"]
margin_left = 85.0
margin_top = 41.0
margin_right = 575.0
margin_bottom = 308.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "italian broomball league"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="NextLeague" type="Button" parent="VBoxContainer/League"]
margin_left = 579.0
margin_top = 127.0
margin_right = 660.0
margin_bottom = 222.0
size_flags_vertical = 4
text = " > "

[node name="Team" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 660.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 250 )
alignment = 1

[node name="PrevTeam" type="Button" parent="VBoxContainer/Team"]
margin_top = 77.0
margin_right = 81.0
margin_bottom = 172.0
size_flags_vertical = 4
text = " < "

[node name="TeamLabel" type="Label" parent="VBoxContainer/Team"]
margin_left = 85.0
margin_top = 81.0
margin_right = 575.0
margin_bottom = 168.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10000"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTeam" type="Button" parent="VBoxContainer/Team"]
margin_left = 579.0
margin_top = 77.0
margin_right = 660.0
margin_bottom = 172.0
size_flags_vertical = 4
text = " > "

[node name="Price" type="Label" parent="VBoxContainer"]
margin_top = 640.0
margin_right = 660.0
margin_bottom = 746.0
theme = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00000"
align = 1

[node name="SpeedBar" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 766.0
margin_right = 660.0
margin_bottom = 850.0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "SPEED"

[node name="PowerBar" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 870.0
margin_right = 660.0
margin_bottom = 954.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 974.0
margin_right = 660.0
margin_bottom = 984.0
rect_min_size = Vector2( 0, 10 )

[node name="Select" type="Button" parent="VBoxContainer"]
margin_top = 1004.0
margin_right = 660.0
margin_bottom = 1099.0
theme = ExtResource( 2 )
text = "PLAY"

[node name="GoBack" type="Button" parent="VBoxContainer"]
margin_top = 1119.0
margin_right = 660.0
margin_bottom = 1214.0
theme = ExtResource( 2 )
text = "GO_BACK"

[node name="Team" type="Sprite" parent="."]
position = Vector2( 358.565, 430.375 )
scale = Vector2( 1.8, 1.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
anims/Unlock = SubResource( 4 )

[node name="Locker" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="VBoxContainer/League/PrevLeague" to="." method="_on_PrevLeague_pressed"]
[connection signal="pressed" from="VBoxContainer/League/NextLeague" to="." method="_on_NextLeague_pressed"]
[connection signal="pressed" from="VBoxContainer/Team/PrevTeam" to="." method="_on_PrevTeam_pressed"]
[connection signal="pressed" from="VBoxContainer/Team/NextTeam" to="." method="_on_NextTeam_pressed"]
[connection signal="pressed" from="VBoxContainer/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="VBoxContainer/GoBack" to="." method="_on_GoBack_pressed"]
